--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,15 +5,11 @@
     <title>The Weather</title>
   </head>
   <body>
-    <h1>{{pageTitle}}</h1>
+    {{> header}}
     <p>
-      {{welcomeMessage}}
+      {{screamIt welcomeMessage}}
     </p>
 
-    <footer>
-      <p>
-        Copyright {{currentYear}}
-      </p>
-    </footer>
+    {{> footer}}
   </body>
 </html>
