--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,6 +7,7 @@
   <body>
     {{> header}}
     <p>
+      <!-- to use hbs you call the helper and then the reference -->
       {{screamIt welcomeMessage}}
     </p>
 
