figured out geocode and set up home page

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,11 @@
 <header>
-  <h1>{{pageTitle}}</h1>
-  <h3>You Will Love It Here!</h3>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-12 col-md-12 col-lg-12">
+        <h1>{{pageTitle}}</h1>
+      </div>
+    </div>
+
   <p>
     <a href="/">Home</a>
   </p>
@@ -10,5 +15,7 @@
   <p>
     <a href="/projects">Projects</a>
   </p>
+
+  </div>
 
 </header>
