--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,15 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Weather</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
     {{> header}}
-    <p>
-      <!-- to use hbs you call the helper and then the reference -->
-      {{screamIt welcomeMessage}}
-    </p>
+
+    <form action='/' method='POST'>
+    <div class="form-group">
+      <label>City</label>
+        <input type='text' name='city' placeholder='
+        city' value=''/>
+    </div>
+
+
+    <div class="form-group">
+        <button type='submit' class='btn btn-success btn-lg' value='Submit'>Submit</button>
+    </div>
+    </div>
+  </form>
 
     {{> footer}}
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
