--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,8 @@
 <footer>
-  <p>
-    Created by <a href='https://cyclokitty.github.io' target='_blank' >Laura Veee</a> - Copyright {{getCurrentYear}}
-  </p>
+  <nav class='navbar fixed-bottom navbar-light bg-faded'>
+    <p>
+      Created by <a href='https://cyclokitty.github.io' target='_blank' >Laura Veee</a> - Copyright {{getCurrentYear}}
+    </p>
+  </nav>
+
 </footer>
