--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,21 +1,1 @@
-<header>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-12">
-        <h1>{{pageTitle}}</h1>
-      </div>
-    </div>
-
-  <p>
-    <a href="/">Home</a>
-  </p>
-  <p>
-    <a href="/about">About</a>
-  </p>
-  <p>
-    <a href="/projects">Projects</a>
-  </p>
-
-  </div>
-
-</header>
+<h4>Laura Veee's {{ pageTitle }}</h4>
