--- a/views/weather.hbs
+++ b/views/weather.hbs
@@ -11,7 +11,7 @@
   <body>
     {{> header }}
     <div class="container-fluid">
-      <div class="jumbotron">
+      <div class="jumbotron weather">
         <div class="row">
           <div class="col-sm-12">
             <h1>Weather</h1>
@@ -30,6 +30,15 @@
         <div class="row">
           <div class="col-sm-12">
             <h4>The longitude is {{lon}}</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <h1><img src="{{icon}}" alt="weather icon"></h1>
+            <h4>{{temp}}&deg;C</h4>
+            <h4> {{humidity}}% humidity</h4>
+            <h4>{{main}}</h4>
+            <h4>{{summary}}</h4>
           </div>
         </div>
 
